# cookiecutter-python-project

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project}}/: .dockerignore  Dockerfile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project}}/.github/workflows/: python-code-checks.yml  python-tests.yml  reusable-get-default-branch.yml
{{cookiecutter.project}}/docs/: Makefile  get_version.py  simplify-module-titles.py
{{cookiecutter.project}}/docs/source/: conf.py  index.rst  modules.rst
